Update base template for 16th edition

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Companion Website for E-commerce. Business, Technology, Society 17th Global Edition</title>
+        <title>Companion website for E-commerce. Business, Technology, Society 16th edition</title>
         <meta name="author" content="Azimuth Interactive">
-        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021-2022, business. technology. society, 17th edition">
+        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021, business. technology. society, 16th edition">
         <meta name="keywords" content="e-commerce,azimuth,interactive,business,technology,society">
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
@@ -19,23 +19,23 @@
                 <li><a href="index.html">Home</a></li>
                 <li>Chapters:</li>
                 <li><a href="toc.html" data-tooltip="Table of Contents">TOC</a></li>
-                <li><a href="chapter1.html" data-tooltip="Introduction to E-commerce">1</a></li>
-                <li><a href="chapter2.html" data-tooltip="E-commerce Business Strategies">2</a></li>
-                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure">3</a></li>
-                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence">4</a></li>
-                <li><a href="chapter5.html" data-tooltip="E-commerce Security and Payment Systems">5</a></li>
-                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising">6</a></li>
+                <li><a href="chapter1.html" data-tooltip="The Revolution is Just Beginning">1</a></li>
+                <li><a href="chapter2.html" data-tooltip="E-commerce Business Models and Concepts">2</a></li>
+                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure: The Internet, Web, and Mobile Platform">3</a></li>
+                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence: Websites, Mobile Sites, and Apps">4</a></li>
+                <li><a href="chapter5.html" data-tooltip="Online Security and Payment Systems">5</a></li>
+                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising Concepts">6</a></li>
                 <li><a href="chapter7.html" data-tooltip="Social, Mobile, and Local Marketing">7</a></li>
-                <li><a href="chapter8.html" data-tooltip="Ethics, Law and E-commerce">8</a></li>
-                <li><a href="chapter9.html" data-tooltip="E-commerce Retail and Services">9</a></li>
-                <li><a href="chapter10.html" data-tooltip="Online Media">10</a></li>
-                <li><a href="chapter11.html" data-tooltip="Online Communities">11</a></li>
-                <li><a href="chapter12.html" data-tooltip="B2B E-commerce">12</a></li>
+                <li><a href="chapter8.html" data-tooltip="Ethical, Social, and Political Issues in E-commerce">8</a></li>
+                <li><a href="chapter9.html" data-tooltip="Online Retail and Services">9</a></li>
+                <li><a href="chapter10.html" data-tooltip="Online Content and Media">10</a></li>
+                <li><a href="chapter11.html" data-tooltip="Social Networks, Auctions, and Portals">11</a></li>
+                <li><a href="chapter12.html" data-tooltip="B2B E-commerce: Supply Chain Management and Collaborative Commerce">12</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
         <div class="homepage-container">
-            <h1>Welcome to the Companion Website for <br/><span class="accent">E-commerce 2021-2022 <br/>business. technology. society, 17th Global Edition</span></h1>
+            <h1>Welcome to the Companion Website for <br/><span class="accent">E-commerce 2021 <br/>business. technology. society, 16th edition</span></h1>
             <div class="homepage-flex-container">
                 <img src="book-cover.png" class="book" alt="Book Cover"/>
                 <div>
@@ -47,7 +47,7 @@
                         <li>career information</li>
                     </ul>
                     <p>To access these resources, click on a chapter number on the navigation bar above.</p>
-                    <p><span class="bold">Instructors:</span> For instructor resources, including instructor's resource manual, PowerPoint presentations, video cases, learning tracks, and image library, please visit the <a href="https://media.pearsoncmg.com/intl/ge/abp/resources/index.html">Pearson Global Editions</a> catalog page for this book</p>    
+                    <p><span class="bold">Instructors:</span> For instructor resources, including instructor's resource manual, PowerPoint presentations, video cases, learning tracks, and image library, please visit the <a href="https://www.pearson.com/us/higher-education/program/Laudon-Pearson-e-Text-E-Commerce-2021-Business-Technology-and-Society-Instant-Access-16th-Edition/PGM100003048280.html">Pearson Global Editions</a> catalog page for this book</p>    
                 </div>
              </div>
             <p class="copyright">Copyright &copy; 2021 Kenneth C. Laudon and Carol G. Traver</p>
