--- a/toc.html
+++ b/toc.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>E-commerce: Table of Contents</title>
         <meta name="author" content="Azimuth Interactive">
-        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021-2022, business. technology. society, 17th edition">
+        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021, business. technology. society, 16th edition">
         <meta name="keywords" content="e-commerce,azimuth,interactive,business,technology,society">
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
@@ -19,18 +19,18 @@
                 <li><a href="index.html">Home</a></li>
                 <li>Chapters:</li>
                 <li><a href="toc.html" data-tooltip="Table of Contents">TOC</a></li>
-                <li><a href="chapter1.html" data-tooltip="Introduction to E-commerce">1</a></li>
-                <li><a href="chapter2.html" data-tooltip="E-commerce Business Strategies">2</a></li>
-                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure">3</a></li>
-                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence">4</a></li>
-                <li><a href="chapter5.html" data-tooltip="E-commerce Security and Payment Systems">5</a></li>
-                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising">6</a></li>
+                <li><a href="chapter1.html" data-tooltip="The Revolution is Just Beginning">1</a></li>
+                <li><a href="chapter2.html" data-tooltip="E-commerce Business Models and Concepts">2</a></li>
+                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure: The Internet, Web, and Mobile Platform">3</a></li>
+                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence: Websites, Mobile Sites, and Apps">4</a></li>
+                <li><a href="chapter5.html" data-tooltip="Online Security and Payment Systems">5</a></li>
+                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising Concepts">6</a></li>
                 <li><a href="chapter7.html" data-tooltip="Social, Mobile, and Local Marketing">7</a></li>
-                <li><a href="chapter8.html" data-tooltip="Ethics, Law and E-commerce">8</a></li>
-                <li><a href="chapter9.html" data-tooltip="E-commerce Retail and Services">9</a></li>
-                <li><a href="chapter10.html" data-tooltip="Online Media">10</a></li>
-                <li><a href="chapter11.html" data-tooltip="Online Communities">11</a></li>
-                <li><a href="chapter12.html" data-tooltip="B2B E-commerce">12</a></li>
+                <li><a href="chapter8.html" data-tooltip="Ethical, Social, and Political Issues in E-commerce">8</a></li>
+                <li><a href="chapter9.html" data-tooltip="Online Retail and Services">9</a></li>
+                <li><a href="chapter10.html" data-tooltip="Online Content and Media">10</a></li>
+                <li><a href="chapter11.html" data-tooltip="Social Networks, Auctions, and Portals">11</a></li>
+                <li><a href="chapter12.html" data-tooltip="B2B E-commerce: Supply Chain Management and Collaborative Commerce">12</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
@@ -39,32 +39,32 @@
                 <h1>Table of Contents</h1>
                 <p>Click on any of the chapter headings below for links to the chapter's learning objectives and projects and exercises.</p>
                 <details>
-                    <summary>Chapter 1: Introduction to E-commerce</summary>
+                    <summary>Chapter 1: The Revolution is Just Beginning</summary>
                     <p><a href="chapter1.html">Learning Objectives</a></p>
                     <p><a href="chapter1-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 2: E-commerce Business Strategies</summary>
+                    <summary>Chapter 2: E-commerce Business Models and Concepts</summary>
                     <p><a href="chapter2.html">Learning Objectives</a></p>
                     <p><a href="chapter2-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 3: E-commerce Infrastructure</summary>
+                    <summary>Chapter 3: E-commerce Infrastructure: The Internet, Web, and Mobile Platform</summary>
                     <p><a href="chapter3.html">Learning Objectives</a></p>
                     <p><a href="chapter3-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 4: Building an E-commerce Presence</summary>
+                    <summary>Chapter 4: Building an E-commerce Presence: Websites, Mobile Sites, and Apps</summary>
                     <p><a href="chapter4.html">Learning Objectives</a></p>
                     <p><a href="chapter4-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 5: E-commerce Security and Payment Systems</summary>
+                    <summary>Chapter 5: Online Security and Payment Systems</summary>
                     <p><a href="chapter5.html">Learning Objectives</a></p>
                     <p><a href="chapter5-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 6: E-commerce Marketing and Advertising</summary>
+                    <summary>Chapter 6: E-commerce Marketing and Advertising Concepts</summary>
                     <p><a href="chapter6.html">Learning Objectives</a></p>
                     <p><a href="chapter6-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
@@ -74,27 +74,27 @@
                     <p><a href="chapter7-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 8: Ethics, Law and E-commerce</summary>
+                    <summary>Chapter 8: Ethical, Social, and Political Issues in E-commerce</summary>
                     <p><a href="chapter8.html">Learning Objectives</a></p>
                     <p><a href="chapter8-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 9: E-commerce Retail and Services</summary>
+                    <summary>Chapter 9: Online Retail and Services</summary>
                     <p><a href="chapter9.html">Learning Objectives</a></p>
                     <p><a href="chapter9-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 10: Online Media</summary>
+                    <summary>Chapter 10: Online Content and Media</summary>
                     <p><a href="chapter10.html">Learning Objectives</a></p>
                     <p><a href="chapter10-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 11: Online Communities</summary>
+                    <summary>Chapter 11: Social Networks, Auctions, and Portals</summary>
                     <p><a href="chapter11.html">Learning Objectives</a></p>
                     <p><a href="chapter11-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
                 <details>
-                    <summary>Chapter 12: B2B E-commerce</summary>
+                    <summary>Chapter 12: B2B E-commerce: Supply Chain Management and Collaborative Commerce</summary>
                     <p><a href="chapter12.html">Learning Objectives</a></p>
                     <p><a href="chapter12-projects-exercises.html">Projects and Exercises</a></p>
                 </details>
