--- a/video-cases.html
+++ b/video-cases.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>E-commerce: Video Cases</title>
         <meta name="author" content="Azimuth Interactive">
-        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021-2022, business. technology. society, 17th edition">
+        <meta name="description" content="Welcome to the Companion Website for E-commerce 2021, business. technology. society, 16th edition">
         <meta name="keywords" content="e-commerce,azimuth,interactive,business,technology,society">
         <link rel="icon" type="image/png" href="favicon.png" />
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
@@ -19,55 +19,55 @@
                 <li><a href="index.html">Home</a></li>
                 <li>Chapters:</li>
                 <li><a href="toc.html" data-tooltip="Table of Contents">TOC</a></li>
-                <li><a href="chapter1.html" data-tooltip="Introduction to E-commerce">1</a></li>
-                <li><a href="chapter2.html" data-tooltip="E-commerce Business Strategies">2</a></li>
-                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure">3</a></li>
-                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence">4</a></li>
-                <li><a href="chapter5.html" data-tooltip="E-commerce Security and Payment Systems">5</a></li>
-                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising">6</a></li>
+                <li><a href="chapter1.html" data-tooltip="The Revolution is Just Beginning">1</a></li>
+                <li><a href="chapter2.html" data-tooltip="E-commerce Business Models and Concepts">2</a></li>
+                <li><a href="chapter3.html" data-tooltip="E-commerce Infrastructure: The Internet, Web, and Mobile Platform">3</a></li>
+                <li><a href="chapter4.html" data-tooltip="Building an E-commerce Presence: Websites, Mobile Sites, and Apps">4</a></li>
+                <li><a href="chapter5.html" data-tooltip="Online Security and Payment Systems">5</a></li>
+                <li><a href="chapter6.html" data-tooltip="E-commerce Marketing and Advertising Concepts">6</a></li>
                 <li><a href="chapter7.html" data-tooltip="Social, Mobile, and Local Marketing">7</a></li>
-                <li><a href="chapter8.html" data-tooltip="Ethics, Law and E-commerce">8</a></li>
-                <li><a href="chapter9.html" data-tooltip="E-commerce Retail and Services">9</a></li>
-                <li><a href="chapter10.html" data-tooltip="Online Media">10</a></li>
-                <li><a href="chapter11.html" data-tooltip="Online Communities">11</a></li>
-                <li><a href="chapter12.html" data-tooltip="B2B E-commerce">12</a></li>
+                <li><a href="chapter8.html" data-tooltip="Ethical, Social, and Political Issues in E-commerce">8</a></li>
+                <li><a href="chapter9.html" data-tooltip="Online Retail and Services">9</a></li>
+                <li><a href="chapter10.html" data-tooltip="Online Content and Media">10</a></li>
+                <li><a href="chapter11.html" data-tooltip="Social Networks, Auctions, and Portals">11</a></li>
+                <li><a href="chapter12.html" data-tooltip="B2B E-commerce: Supply Chain Management and Collaborative Commerce">12</a></li>
                 <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
         <div class="container">
             <main>
                 <h1>Video Case Studies</h1>
-                <p>The <a href="https://media.pearsoncmg.com/intl/ge/abp/resources/index.html">Pearson Global Editions catalog page</a> for this book provides access to instructors to a collection of video case studies that integrate short videos, supporting case study material, and case study question.</p>
+                <p>Pearson Higher Education's <a href="https://www.pearson.com/us/higher-education/program/Laudon-Pearson-e-Text-E-Commerce-2021-Business-Technology-and-Society-Instant-Access-16th-Edition/PGM100003048280.html">Online Resource Center</a> for the book provides access to instructors to a collection of video case studies that integrate short videos, supporting case study material, and case study question.</p>
                 <p>Video case studies include the following:</p>
-                <h3>Chapter 1: Introduction to E-commerce</h3>
+                <h3>Chapter 1: The Revolution is Just Beginning</h3>
                 <ul>
                     <li>Case 1.1: The Importance of the Internet for E-commerce</li>
                     <li>Case 1.2: The Growth of the On-Demand Economy</li>
                 </ul>
-                <h3>Chapter 2: E-commerce Business Strategies</h3>
+                <h3>Chapter 2: E-commerce Business Models and Concepts</h3>
                 <ul>
                     <li>Case 2.1: Glossier</li>
                     <li>Case 2.2: Angel Investing</li>
                 </ul>
-                <h3>Chapter 3: E-commerce Infrastructure</h3>
+                <h3>Chapter 3: E-commerce Infrastructure: The Internet, Web, and Mobile Platform</h3>
                 <ul>
                     <li>Case 3.1: How Freshdesk Uses Amazon Web Services</li>
                     <li>Case 3.2: Compare.com Turns to Microsoft Azure and the Cloud</li>
                     <li>Case 3.3: Facebook's Data Centers</li>
                     <li>Case 3.4: Smart Speakers: Amazon Echo and Google Home</li>
                 </ul>
-                <h3>Chapter 4: Building an E-commerce Presence</h3>
+                <h3>Chapter 4: Building an E-commerce Presence: Websites, Mobile Sites, and Apps</h3>
                 <ul>
                     <li>Case 4.1: E-commerce Platforms: Salesforce Commerce Cloud</li>
                     <li>Case 4.2: National Kidney Registry Turns to Rackspace for Managed Hosting</li>
                     <li>Case 4.3: Building a Mobile App</li>
                 </ul>
-                <h3>Chapter 5: E-commerce Security and Payment Systems</h3>
+                <h3>Chapter 5: Online Security and Payment Systems</h3>
                 <ul>
                     <li>Case 5.1: The Rise of Cyberwarfare</li>
                     <li>Case 5.2: Understanding Bitcoin</li>
                 </ul>
-                <h3>Chapter 6: E-commerce Marketing and Advertising</h3>
+                <h3>Chapter 6: E-commerce Marketing and Advertising Concepts</h3>
                 <ul>
                     <li>Case 6.1: To Ad Block or Not to Ad Block</li>
                     <li>Case 6.2: Pandora's Recommendation System</li>
@@ -79,30 +79,30 @@
                     <li>Case 7.2: The Full Value of Mobile Marketing</li>
                     <li>Case 7.3: Yelp</li>
                 </ul>
-                <h3>Chapter 8: Ethics, Law, and E-commerce</h3>
+                <h3>Chapter 8: Ethical, Social, and Political Issues in E-commerce</h3>
                 <ul>
                     <li>Case 8.1: The Right to Be Forgotten</li>
                     <li>Case 8.2: Facebook Privacy </li>
                     <li>Case 8.3: What Net Neutrality Means for You</li>
                 </ul>
-                <h3>Chapter 9: E-commerce Retail and Services</h3>
+                <h3>Chapter 9: Online Retail and Services</h3>
                 <ul>
                   <li>Case 9.1: Walmart Takes on Amazon</li>
                   <li>Case 9.2: Etsy: A Marketplace and a Community</li>
                 </ul>
-                <h3>Chapter 10: Online Media</h3>
+                <h3>Chapter 10: Online Content and Media</h3>
                 <ul>
                   <li>Case 10.1: YouTube: Secrets of Successful Content Creators</li>
                   <li>Case 10.2: Vox Media</li>
                   <li>Case 10.3: ESPN: Sports Broadcasting Evolves</li>
                   <li>Case 10.4: Disney+</li>
                 </ul>
-                <h3>Chapter 11: Online Communities</h3>
+                <h3>Chapter 11: Social Networks, Auctions, and Portals</h3>
                 <ul>
                   <li>Case 11.1: Instagram</li>
                   <li>Case 11.2: Small Business Find a Home on eBay</li>
                 </ul>
-                <h3>Chapter 12: B2B E-commerce</h3>
+                <h3>Chapter 12: B2B E-commerce: Supply Chain Management and Collaborative Commerce</h3>
                 <ul>
                   <li>Case 12.1: Elementum</li>
                   <li>Case 12.2: Mecham Groep Streamlines with Sana Commerce</li>
