Two minor punctuation fixes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <li>career information</li>
                     </ul>
                     <p>To access these resources, click on a chapter number on the navigation bar above.</p>
-                    <p><span class="bold">Instructors:</span> For instructor resources, including instructor's resource manual, PowerPoint presentations, video cases, learning tracks, and image library, please visit <a href="https://www.pearson.com/us/higher-education/program/Laudon-Pearson-e-Text-E-Commerce-2021-Business-Technology-and-Society-Instant-Access-16th-Edition/PGM100003048280.html">Pearson's catalog page</a> for this book</p>    
+                    <p><span class="bold">Instructors:</span> For instructor resources, including instructor's resource manual, PowerPoint presentations, video cases, learning tracks, and image library, please visit <a href="https://www.pearson.com/us/higher-education/program/Laudon-Pearson-e-Text-E-Commerce-2021-Business-Technology-and-Society-Instant-Access-16th-Edition/PGM100003048280.html">Pearson's catalog page</a> for this book.</p>    
                 </div>
              </div>
             <p class="copyright">Copyright &copy; 2021 Kenneth C. Laudon and Carol G. Traver</p>
